# IsoEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
demos/: CMakeLists.txt
demos/demo1/: CMakeLists.txt  README.md  main.cpp
demos/souls/: CMakeLists.txt  README.md  main.cpp
demos/zombies/: CMakeLists.txt  README.md  main.cpp  map.txt
demos/zombies/include/: entity.h  game.h
demos/zombies/src/: entity.cpp  game.cpp
include/isoengine/: directed_game_object.h  engine.h  game_object.h
include/isoengine/common/: clock.h  consoletable.h  hashedstring.h  utils.h
include/isoengine/debug/: assert.h  profile.h  utils.h
include/isoengine/events/: command_queue.h  commandqueue.h  delegates.h  event.h  sfml_events.h
include/isoengine/highlevel/: engine.h  gameobject.h  renderscene.h  scenenode.h
include/isoengine/math/: hash.h  isometric.h  matrix.h  rect.h  transform.h  vector2.h
include/isoengine/physics/: collision_detector.h
include/isoengine/render/: animation.h  animator.h  drawable.h  font.h  (+6 more)
src/: directed_game_object.cpp  engine.cpp  game_object.cpp  main.cpp
src/common/: clock.cpp  consoletable.cpp
src/debug/: assert.cpp  console_table.cpp  profile.cpp
src/events/: command_queue.cpp  commandqueue.cpp  event.cpp  sfml_events.cpp
src/highlevel/: engine.cpp  gameobject.cpp  renderscene.cpp  scenenode.cpp
src/math/: isometric.cpp  transform.cpp
src/physics/: collision_detector.cpp
src/render/: animation.cpp  animator.cpp  font.cpp  render_scene.cpp  scene_node.cpp  sprite.cpp  text.cpp  texture.cpp  window.cpp
src/support/: resource_manager.cpp  resourcemanager.cpp
test/: hashedstring.cpp  utils.cpp
(+8 files in other folders)
